k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  labels:
    app: react-app
  annotations:
    # Uses the classic ELB by default; switch to NLB by adding:
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
